Fixed navbar wrap bug, fixed navbar padding and added content

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a {
 }
 a:hover {
     color: #000000;
+    font-weight: bold;
 }
 
 a.anchor {
@@ -89,17 +90,16 @@ li.dropdown:hover > .dropdown-menu {
     -moz-transition: all 0.3s;
     transition: all 0.3s;
     text-align: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
 }
 
-#mainNav .name a {
+#mainNav .name {
     font-size: 18px;
-    letter-spacing: 1.5px;
+    letter-spacing: 3px;
     margin-left: 8%;
     font-family: "Consolas Bold", sans-serif;
     color: #585858;
-    letter-spacing: 5px;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -107,7 +107,6 @@ li.dropdown:hover > .dropdown-menu {
 #mainNav .ham-menu {
     width: 60px;
     color: #585858;
-    margin-left: auto;
     margin-right: 5%;
 }
 
@@ -340,8 +339,7 @@ li.dropdown:hover > .dropdown-menu {
         -webkit-transition: all 0.3s;
         -moz-transition: all 0.3s;
         transition: all 0.3s;
-        margin-top: 1.1em;
-        padding: 1.5em 1.2em;
+        padding: 2em 1.2em;
     }
 
     #mainNav ul {
